<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Supersave</string>

    <!-- Spash Screen -->
    <string name="about_apps_title">Supersave</string>
    <string name="about_apps_version">Version 1.1.0</string>
    <string name="about_apps_copyrigth">© 2014 Progrema, Inc.</string>
    <string name="about_apps_right">All rights reserved.</string>
    <string name="title_section1">Dashboard</string>
    <string name="title_section2">Expenses</string>
    <string name="title_section3">Saving Goals</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Login</string>
    <string name="hello_world">Hello world!</string>

    <!-- LoginActivity -->
    <string name="login_welcome_text1">Welcome to Supersave!</string>
    <string name="login_welcome_text2">Set your monthly budget and a date to reset budget every month</string>
    <string name="login_user_name_title">Name</string>
    <string name="login_budget_title">Monthly Budget</string>
    <string name="login_cycle_date_title">Reset Date</string>
    <string name="login_first_time_budget_title">Budget Until Cycle Date</string>
    <string name="login_cycle_date_help">You have {rem_day} days until your first reset date, set your starting budget</string>
    <string name="login_user_name_default">John</string>
    <string name="login_budget_default">2000</string>
    <string name="login_cycle_date_default">1st</string>
    <string name="login_first_time_budget_default">500 (less than monthly budget)</string>
    <string name="action_go">Confirm</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_spash">SpashActivity</string>

</resources>
