<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.progrema.supersave.ui.activities.LoginActivity">

    <TextView android:text="@string/login_user_name_title"
        android:id="@+id/id_login_name_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/id_login_name_textbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/id_login_name_title"/>

    <TextView android:text="@string/login_budget_title"
        android:id="@+id/id_login_budget_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/id_login_name_textbox"/>

    <LinearLayout
        android:id="@+id/id_login_budget_section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/id_login_budget_title">

        <EditText
            android:id="@+id/id_login_budget_textbox"
            android:layout_width="wrap_content"
            android:layout_weight="3"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:layout_below="@id/id_login_budget_title"/>

        <Spinner
            android:id="@+id/login_currency_id"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/id_login_budget_textbox">

        </Spinner>

        </LinearLayout>


    <TextView android:text="@string/login_cycle_date_title"
        android:id="@+id/id_login_cycle_date_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/id_login_budget_section"/>

    <EditText
        android:id="@+id/id_login_cycle_date_textbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:layout_below="@id/id_login_cycle_date_title"/>

    <RelativeLayout
        android:id="@+id/first_time_budget_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/id_login_cycle_date_textbox"
        android:visibility="gone"
        >

        <TextView android:text="@string/login_cycle_date_help"
            android:id="@+id/id_login_help_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView android:text="@string/login_first_time_budget_title"
            android:id="@+id/id_login_first_time_budget_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/id_login_help_text"/>

        <EditText
            android:id="@+id/id_login_first_time_budget"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:layout_below="@id/id_login_first_time_budget_title"/>

        </RelativeLayout>

</RelativeLayout>
